--- a/Taylr/Base.lproj/Main.storyboard
+++ b/Taylr/Base.lproj/Main.storyboard
@@ -462,6 +462,23 @@
                                             <outlet property="coverFrameView" destination="Sze-p9-Syp" id="GfJ-2Q-P0J"/>
                                         </connections>
                                     </collectionViewCell>
+                                    <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" reuseIdentifier="RecorderCell" id="kKP-Iy-gw6">
+                                        <rect key="frame" x="0.0" y="0.0" width="50" height="50"/>
+                                        <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                        <view key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center">
+                                            <rect key="frame" x="0.0" y="0.0" width="300" height="400"/>
+                                            <autoresizingMask key="autoresizingMask"/>
+                                            <subviews>
+                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="I'm a recorder" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="LHH-3Z-qxJ">
+                                                    <rect key="frame" x="97" y="189" width="107" height="21"/>
+                                                    <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                                    <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
+                                                    <nil key="highlightedColor"/>
+                                                </label>
+                                            </subviews>
+                                            <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
+                                        </view>
+                                    </collectionViewCell>
                                 </cells>
                             </collectionView>
                         </subviews>
@@ -499,6 +516,69 @@
                 <placeholder placeholderIdentifier="IBFirstResponder" id="OaH-F1-uJP" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="1006" y="2816"/>
+        </scene>
+        <!--Recorder View Controller-->
+        <scene sceneID="Pua-UW-P1A">
+            <objects>
+                <viewController storyboardIdentifier="Recorder" id="Ql2-Jz-gM0" customClass="RecorderViewController" customModule="Taylr" customModuleProvider="target" sceneMemberID="viewController">
+                    <layoutGuides>
+                        <viewControllerLayoutGuide type="top" id="GdV-pc-a1d"/>
+                        <viewControllerLayoutGuide type="bottom" id="euU-MK-s1G"/>
+                    </layoutGuides>
+                    <view key="view" contentMode="scaleToFill" id="fUa-NX-IYh">
+                        <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <view contentMode="scaleToFill" misplaced="YES" translatesAutoresizingMaskIntoConstraints="NO" id="MIa-44-FDo" userLabel="Camera Preview">
+                                <rect key="frame" x="0.0" y="20" width="600" height="520"/>
+                                <color key="backgroundColor" white="0.0" alpha="1" colorSpace="calibratedWhite"/>
+                            </view>
+                            <button opaque="NO" contentMode="scaleToFill" misplaced="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Boo-rZ-3uw" userLabel="Flip Camera">
+                                <rect key="frame" x="16" y="40" width="39" height="30"/>
+                                <state key="normal" image="ic-camera-flip">
+                                    <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
+                                </state>
+                            </button>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="7qa-Zj-60n" userLabel="Capture">
+                                <rect key="frame" x="259" y="496" width="83" height="84"/>
+                                <state key="normal" image="ic-capture">
+                                    <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
+                                </state>
+                            </button>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Rc7-ox-IdX" userLabel="Magic Wand">
+                                <rect key="frame" x="20" y="542" width="37" height="38"/>
+                                <state key="normal" image="ic-magic-wand">
+                                    <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
+                                </state>
+                            </button>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="1sW-Kn-5np" userLabel="Edit Text">
+                                <rect key="frame" x="548" y="547" width="32" height="33"/>
+                                <state key="normal" image="ic-edit-text">
+                                    <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
+                                </state>
+                            </button>
+                        </subviews>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                        <constraints>
+                            <constraint firstItem="MIa-44-FDo" firstAttribute="top" secondItem="GdV-pc-a1d" secondAttribute="bottom" id="14h-Gx-lyE"/>
+                            <constraint firstItem="euU-MK-s1G" firstAttribute="top" secondItem="MIa-44-FDo" secondAttribute="bottom" constant="60" id="4lg-yu-nEp"/>
+                            <constraint firstItem="Rc7-ox-IdX" firstAttribute="leading" secondItem="fUa-NX-IYh" secondAttribute="leading" constant="20" id="7Ye-DU-OjK"/>
+                            <constraint firstItem="euU-MK-s1G" firstAttribute="top" secondItem="1sW-Kn-5np" secondAttribute="bottom" constant="20" id="850-Ur-QKA"/>
+                            <constraint firstItem="MIa-44-FDo" firstAttribute="leading" secondItem="fUa-NX-IYh" secondAttribute="leading" id="9ZL-u5-vyJ"/>
+                            <constraint firstItem="Boo-rZ-3uw" firstAttribute="leading" secondItem="fUa-NX-IYh" secondAttribute="leading" constant="20" id="9jH-Rb-h3q"/>
+                            <constraint firstItem="Boo-rZ-3uw" firstAttribute="top" secondItem="GdV-pc-a1d" secondAttribute="bottom" constant="20" id="A1S-U1-3Dk"/>
+                            <constraint firstAttribute="centerX" secondItem="7qa-Zj-60n" secondAttribute="centerX" constant="-0.5" id="BJM-2D-5IB"/>
+                            <constraint firstItem="euU-MK-s1G" firstAttribute="top" secondItem="Rc7-ox-IdX" secondAttribute="bottom" constant="20" id="G43-7g-ULc"/>
+                            <constraint firstAttribute="trailing" secondItem="MIa-44-FDo" secondAttribute="trailing" id="YqU-eA-i2n"/>
+                            <constraint firstItem="euU-MK-s1G" firstAttribute="top" secondItem="7qa-Zj-60n" secondAttribute="bottom" constant="20" id="d8A-Lh-ilj"/>
+                            <constraint firstItem="1sW-Kn-5np" firstAttribute="trailing" secondItem="fUa-NX-IYh" secondAttribute="trailing" constant="-20" id="xWu-OA-SdF"/>
+                        </constraints>
+                    </view>
+                    <nil key="simulatedStatusBarMetrics"/>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="XSS-Fr-Thh" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="1670" y="2816"/>
         </scene>
         <!--Me-->
         <scene sceneID="GiO-5i-rfP">
@@ -564,10 +644,14 @@
     <resources>
         <image name="ic-back" width="17" height="23"/>
         <image name="ic-camera" width="83" height="84"/>
+        <image name="ic-camera-flip" width="39" height="30"/>
+        <image name="ic-capture" width="83" height="84"/>
         <image name="ic-chats" width="32" height="32"/>
         <image name="ic-disclosure" width="11" height="29"/>
+        <image name="ic-edit-text" width="32" height="33"/>
         <image name="ic-flag" width="16" height="23"/>
         <image name="ic-home" width="27" height="26"/>
+        <image name="ic-magic-wand" width="37" height="38"/>
         <image name="ic-me" width="34" height="35"/>
         <image name="ic-mute" width="19" height="18"/>
         <image name="ic-play" width="60" height="60"/>
