--- a/Taylr/Base.lproj/Main.storyboard
+++ b/Taylr/Base.lproj/Main.storyboard
@@ -26,116 +26,6 @@
             </objects>
             <point key="canvasLocation" x="366" y="1290"/>
         </scene>
-        <!--Home-->
-        <scene sceneID="vR8-xi-jxM">
-            <objects>
-                <viewController storyboardIdentifier="Home" title="Serendipity" automaticallyAdjustsScrollViewInsets="NO" id="shX-ul-wcc" userLabel="Home" customClass="HomeViewController" customModule="Taylr" customModuleProvider="target" sceneMemberID="viewController">
-                    <layoutGuides>
-                        <viewControllerLayoutGuide type="top" id="jRK-xA-i7r"/>
-                        <viewControllerLayoutGuide type="bottom" id="2Nv-ot-SIm"/>
-                    </layoutGuides>
-                    <view key="view" contentMode="scaleToFill" id="DPg-hp-ZP8">
-                        <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
-                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
-                        <subviews>
-                            <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="375" sectionHeaderHeight="60" sectionFooterHeight="22" translatesAutoresizingMaskIntoConstraints="NO" id="hgw-6V-viR">
-                                <rect key="frame" x="0.0" y="20" width="600" height="580"/>
-                                <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
-                                <prototypes>
-                                    <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" reuseIdentifier="PostCell" id="s0d-Qa-gCa" customClass="PostCell" customModule="Taylr" customModuleProvider="target">
-                                        <rect key="frame" x="0.0" y="0.0" width="600" height="44"/>
-                                        <autoresizingMask key="autoresizingMask"/>
-                                        <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="s0d-Qa-gCa" id="PFX-PB-3Vs">
-                                            <autoresizingMask key="autoresizingMask"/>
-                                            <subviews>
-                                                <imageView userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="sample-taylor-video-frame" translatesAutoresizingMaskIntoConstraints="NO" id="v4I-LM-QpA">
-                                                    <rect key="frame" x="0.0" y="0.0" width="600" height="374"/>
-                                                </imageView>
-                                                <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="ckM-BK-Yrx" userLabel="Mute">
-                                                    <rect key="frame" x="8" y="8" width="19" height="22"/>
-                                                    <state key="normal" image="ic-mute">
-                                                        <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
-                                                    </state>
-                                                </button>
-                                                <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="AMW-0g-GVm" userLabel="Flag">
-                                                    <rect key="frame" x="576" y="343" width="16" height="23"/>
-                                                    <state key="normal" image="ic-flag">
-                                                        <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
-                                                    </state>
-                                                </button>
-                                            </subviews>
-                                            <constraints>
-                                                <constraint firstAttribute="trailing" secondItem="v4I-LM-QpA" secondAttribute="trailing" id="FwU-Sd-ODp"/>
-                                                <constraint firstItem="v4I-LM-QpA" firstAttribute="top" secondItem="PFX-PB-3Vs" secondAttribute="top" id="Qr3-Ms-jqs"/>
-                                                <constraint firstItem="ckM-BK-Yrx" firstAttribute="leading" secondItem="PFX-PB-3Vs" secondAttribute="leadingMargin" id="Rlc-hq-PXX"/>
-                                                <constraint firstItem="AMW-0g-GVm" firstAttribute="bottom" secondItem="PFX-PB-3Vs" secondAttribute="bottomMargin" id="SNo-HX-iHh"/>
-                                                <constraint firstItem="AMW-0g-GVm" firstAttribute="trailing" secondItem="PFX-PB-3Vs" secondAttribute="trailingMargin" id="feU-JR-XKJ"/>
-                                                <constraint firstAttribute="bottom" secondItem="v4I-LM-QpA" secondAttribute="bottom" id="pfX-bO-Wi0"/>
-                                                <constraint firstItem="ckM-BK-Yrx" firstAttribute="top" secondItem="PFX-PB-3Vs" secondAttribute="topMargin" id="u2b-2e-rFB"/>
-                                                <constraint firstItem="v4I-LM-QpA" firstAttribute="leading" secondItem="PFX-PB-3Vs" secondAttribute="leading" id="wmx-e8-D0j"/>
-                                            </constraints>
-                                        </tableViewCellContentView>
-                                        <connections>
-                                            <outlet property="coverFrameView" destination="v4I-LM-QpA" id="86f-Og-XKK"/>
-                                        </connections>
-                                    </tableViewCell>
-                                </prototypes>
-                            </tableView>
-                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Bpx-8k-jax">
-                                <rect key="frame" x="259" y="508" width="83" height="84"/>
-                                <state key="normal" image="ic-camera">
-                                    <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
-                                </state>
-                                <connections>
-                                    <segue destination="Kbf-Fn-ANz" kind="show" id="lPQ-PI-YZc"/>
-                                </connections>
-                            </button>
-                        </subviews>
-                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
-                        <constraints>
-                            <constraint firstItem="hgw-6V-viR" firstAttribute="top" secondItem="jRK-xA-i7r" secondAttribute="bottom" id="0WK-Ix-4tK"/>
-                            <constraint firstItem="hgw-6V-viR" firstAttribute="leading" secondItem="DPg-hp-ZP8" secondAttribute="leading" id="AlQ-eC-w1h"/>
-                            <constraint firstItem="2Nv-ot-SIm" firstAttribute="top" secondItem="hgw-6V-viR" secondAttribute="bottom" id="Ebk-DO-OSM"/>
-                            <constraint firstItem="2Nv-ot-SIm" firstAttribute="top" secondItem="Bpx-8k-jax" secondAttribute="bottom" constant="8" id="Th4-Zx-Be3"/>
-                            <constraint firstAttribute="centerX" secondItem="Bpx-8k-jax" secondAttribute="centerX" id="ija-my-P8f"/>
-                            <constraint firstAttribute="trailing" secondItem="hgw-6V-viR" secondAttribute="trailing" id="qwo-aS-I7g"/>
-                        </constraints>
-                    </view>
-                    <tabBarItem key="tabBarItem" title="Home" image="ic-home" id="m5R-RP-zW7"/>
-                    <connections>
-                        <outlet property="tableView" destination="hgw-6V-viR" id="6Jr-VU-nnh"/>
-                    </connections>
-                </viewController>
-                <placeholder placeholderIdentifier="IBFirstResponder" id="F7c-ck-fGw" userLabel="First Responder" sceneMemberID="firstResponder"/>
-            </objects>
-            <point key="canvasLocation" x="-958" y="2715"/>
-        </scene>
-        <!--New Post View Controller-->
-        <scene sceneID="ApC-au-g1S">
-            <objects>
-                <viewController id="Kbf-Fn-ANz" customClass="NewPostViewController" customModule="Taylr" customModuleProvider="target" sceneMemberID="viewController">
-                    <layoutGuides>
-                        <viewControllerLayoutGuide type="top" id="rgw-VV-Lno"/>
-                        <viewControllerLayoutGuide type="bottom" id="yid-Bu-6PY"/>
-                    </layoutGuides>
-                    <view key="view" contentMode="scaleToFill" id="4xw-Ob-LWM">
-                        <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
-                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
-                        <subviews>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="New Post" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="0C3-s8-YsG">
-                                <rect key="frame" x="37" y="313" width="75" height="21"/>
-                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
-                                <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
-                                <nil key="highlightedColor"/>
-                            </label>
-                        </subviews>
-                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
-                    </view>
-                </viewController>
-                <placeholder placeholderIdentifier="IBFirstResponder" id="7Tn-Xi-Yk1" userLabel="First Responder" sceneMemberID="firstResponder"/>
-            </objects>
-            <point key="canvasLocation" x="-273" y="2721"/>
-        </scene>
         <!--Discover-->
         <scene sceneID="NpM-jt-gve">
             <objects>
@@ -148,8 +38,11 @@
                         <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <collectionView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" misplaced="YES" dataMode="prototypes" translatesAutoresizingMaskIntoConstraints="NO" id="5D7-hF-WjP">
-                                <rect key="frame" x="0.0" y="64" width="600" height="487"/>
+                            <mapView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" mapType="standard" zoomEnabled="NO" scrollEnabled="NO" rotateEnabled="NO" pitchEnabled="NO" showsUserLocation="YES" showsBuildings="NO" showsPointsOfInterest="NO" translatesAutoresizingMaskIntoConstraints="NO" id="OMv-sx-KVx">
+                                <rect key="frame" x="0.0" y="64" width="600" height="536"/>
+                            </mapView>
+                            <collectionView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" dataMode="prototypes" translatesAutoresizingMaskIntoConstraints="NO" id="5D7-hF-WjP">
+                                <rect key="frame" x="0.0" y="64" width="600" height="536"/>
                                 <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
                                 <collectionViewFlowLayout key="collectionViewLayout" minimumLineSpacing="5" minimumInteritemSpacing="5" id="u3H-VG-WK1">
                                     <size key="itemSize" width="180" height="250"/>
@@ -214,9 +107,13 @@
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                         <constraints>
+                            <constraint firstAttribute="trailing" secondItem="OMv-sx-KVx" secondAttribute="trailing" id="7E4-gi-0hZ"/>
                             <constraint firstItem="5D7-hF-WjP" firstAttribute="top" secondItem="zvc-KD-L5T" secondAttribute="bottom" id="HlO-D7-vJD"/>
                             <constraint firstItem="5D7-hF-WjP" firstAttribute="leading" secondItem="13x-l4-1hd" secondAttribute="leading" id="M36-SB-Bic"/>
                             <constraint firstAttribute="trailing" secondItem="5D7-hF-WjP" secondAttribute="trailing" id="SvD-dR-6Sd"/>
+                            <constraint firstItem="OMv-sx-KVx" firstAttribute="leading" secondItem="13x-l4-1hd" secondAttribute="leading" id="TwB-QC-cTa"/>
+                            <constraint firstItem="OMv-sx-KVx" firstAttribute="top" secondItem="zvc-KD-L5T" secondAttribute="bottom" id="d5O-kv-5Ns"/>
+                            <constraint firstItem="F41-Jg-0mT" firstAttribute="top" secondItem="OMv-sx-KVx" secondAttribute="bottom" id="eCh-Vb-8CG"/>
                             <constraint firstItem="F41-Jg-0mT" firstAttribute="top" secondItem="5D7-hF-WjP" secondAttribute="bottom" id="fN9-2m-V9c"/>
                         </constraints>
                     </view>
@@ -593,24 +490,13 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Me" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="DB7-1S-8VL">
-                                <rect key="frame" x="16" y="295" width="25" height="21"/>
+                                <rect key="frame" x="288" y="137" width="25" height="21"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                 <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
                                 <nil key="highlightedColor"/>
                             </label>
-                            <mapView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" mapType="standard" zoomEnabled="NO" scrollEnabled="NO" rotateEnabled="NO" pitchEnabled="NO" showsUserLocation="YES" showsBuildings="NO" showsPointsOfInterest="NO" translatesAutoresizingMaskIntoConstraints="NO" id="OMv-sx-KVx">
-                                <rect key="frame" x="0.0" y="64" width="600" height="175"/>
-                                <constraints>
-                                    <constraint firstAttribute="height" constant="175" id="mF8-mr-JWT"/>
-                                </constraints>
-                            </mapView>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
-                        <constraints>
-                            <constraint firstAttribute="trailing" secondItem="OMv-sx-KVx" secondAttribute="trailing" id="DXg-Ob-4oc"/>
-                            <constraint firstItem="OMv-sx-KVx" firstAttribute="top" secondItem="rbh-DD-zC5" secondAttribute="bottom" id="nhi-Ny-Ec3"/>
-                            <constraint firstItem="OMv-sx-KVx" firstAttribute="leading" secondItem="uj7-s2-Wdm" secondAttribute="leading" id="oaz-dT-TRR"/>
-                        </constraints>
                     </view>
                     <navigationItem key="navigationItem" title="Me" id="aaw-e6-lIV"/>
                     <connections>
@@ -622,42 +508,19 @@
             </objects>
             <point key="canvasLocation" x="-273" y="2032"/>
         </scene>
-        <!--View Controller-->
-        <scene sceneID="rki-1f-6d4">
-            <objects>
-                <viewController automaticallyAdjustsScrollViewInsets="NO" id="IBH-f1-6dh" sceneMemberID="viewController">
-                    <layoutGuides>
-                        <viewControllerLayoutGuide type="top" id="bDX-4Q-oKA"/>
-                        <viewControllerLayoutGuide type="bottom" id="3CE-hD-AYM"/>
-                    </layoutGuides>
-                    <view key="view" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" id="QtB-dM-2wP">
-                        <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
-                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
-                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
-                    </view>
-                    <toolbarItems/>
-                </viewController>
-                <placeholder placeholderIdentifier="IBFirstResponder" id="P07-Sr-NlX" userLabel="First Responder" sceneMemberID="firstResponder"/>
-            </objects>
-        </scene>
     </scenes>
     <resources>
         <image name="ic-back" width="17" height="23"/>
-        <image name="ic-camera" width="83" height="84"/>
         <image name="ic-camera-flip" width="39" height="30"/>
         <image name="ic-capture" width="83" height="84"/>
         <image name="ic-chats" width="32" height="32"/>
         <image name="ic-disclosure" width="11" height="29"/>
         <image name="ic-edit-text" width="32" height="33"/>
-        <image name="ic-flag" width="16" height="23"/>
-        <image name="ic-home" width="27" height="26"/>
         <image name="ic-magic-wand" width="37" height="38"/>
         <image name="ic-me" width="34" height="35"/>
-        <image name="ic-mute" width="19" height="18"/>
         <image name="ic-play" width="60" height="60"/>
         <image name="sample-selfie-preview" width="353" height="469"/>
         <image name="sample-taylor-avatar" width="66" height="67"/>
         <image name="sample-taylor-avatar-square" width="167" height="168"/>
-        <image name="sample-taylor-video-frame" width="375" height="375"/>
     </resources>
 </document>
