--- a/TestApp/Main.storyboard
+++ b/TestApp/Main.storyboard
@@ -8,7 +8,7 @@
         <!--Recorder View Controller-->
         <scene sceneID="kNa-rK-164">
             <objects>
-                <viewController id="iXw-pM-Uzl" customClass="RecorderViewController" customModule="Camera" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController id="iXw-pM-Uzl" customClass="RecorderViewController" customModule="TestApp" customModuleProvider="target" sceneMemberID="viewController">
                     <layoutGuides>
                         <viewControllerLayoutGuide type="top" id="v2h-V3-giF"/>
                         <viewControllerLayoutGuide type="bottom" id="8Wb-LY-vzV"/>
@@ -21,6 +21,12 @@
                                 <rect key="frame" x="16" y="20" width="568" height="560"/>
                                 <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
                             </view>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Hello" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="GkV-lX-2nH">
+                                <rect key="frame" x="266" y="246" width="42" height="21"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                         <constraints>
