--- a/Taylr/AVKit/AVKit.storyboard
+++ b/Taylr/AVKit/AVKit.storyboard
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="7706" systemVersion="14D136" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="7706" systemVersion="14D136" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" initialViewController="B5O-Nb-tlk">
     <dependencies>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="7703"/>
     </dependencies>
@@ -13,9 +13,6 @@
                         <rect key="frame" x="0.0" y="0.0" width="320" height="44"/>
                         <autoresizingMask key="autoresizingMask"/>
                     </navigationBar>
-                    <connections>
-                        <segue destination="Mkj-ew-cSR" kind="relationship" relationship="rootViewController" id="1DS-hY-7QN"/>
-                    </connections>
                 </navigationController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="CgU-v0-x1p" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
@@ -32,8 +29,47 @@
                     <view key="view" contentMode="scaleToFill" id="Mm1-nh-CJO">
                         <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <view contentMode="scaleAspectFill" translatesAutoresizingMaskIntoConstraints="NO" id="jrS-6I-cjW" userLabel="Filtered Video View" customClass="SCSwipeableFilterView">
+                                <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
+                                <color key="backgroundColor" white="0.0" alpha="1" colorSpace="calibratedWhite"/>
+                            </view>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Ahy-43-dzw" userLabel="Close">
+                                <rect key="frame" x="20" y="20" width="28" height="28"/>
+                                <state key="normal" image="ic-close">
+                                    <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
+                                </state>
+                                <connections>
+                                    <action selector="cancelEditing:" destination="uPv-0o-aed" eventType="touchUpInside" id="x2y-mV-LHa"/>
+                                </connections>
+                            </button>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="xwQ-nI-9Ji">
+                                <rect key="frame" x="271" y="544" width="58" height="36"/>
+                                <fontDescription key="fontDescription" type="system" weight="black" pointSize="20"/>
+                                <state key="normal" title="SEND">
+                                    <color key="titleColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                    <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
+                                </state>
+                                <connections>
+                                    <action selector="finishEditing:" destination="uPv-0o-aed" eventType="touchUpInside" id="QAJ-dY-vsg"/>
+                                </connections>
+                            </button>
+                        </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                        <constraints>
+                            <constraint firstItem="Ahy-43-dzw" firstAttribute="top" secondItem="NLf-hM-Uv9" secondAttribute="bottom" constant="20" id="0G0-a8-ngY"/>
+                            <constraint firstItem="ccj-Kj-OsA" firstAttribute="top" secondItem="xwQ-nI-9Ji" secondAttribute="bottom" constant="20" id="0QY-WL-Esp"/>
+                            <constraint firstItem="jrS-6I-cjW" firstAttribute="leading" secondItem="Mm1-nh-CJO" secondAttribute="leading" id="1ZM-DU-aBC"/>
+                            <constraint firstAttribute="trailing" secondItem="jrS-6I-cjW" secondAttribute="trailing" id="CoB-i3-2n0"/>
+                            <constraint firstItem="Ahy-43-dzw" firstAttribute="leading" secondItem="Mm1-nh-CJO" secondAttribute="leading" constant="20" id="b8G-VH-qIq"/>
+                            <constraint firstAttribute="centerX" secondItem="xwQ-nI-9Ji" secondAttribute="centerX" id="g1F-JH-8qN"/>
+                            <constraint firstItem="ccj-Kj-OsA" firstAttribute="top" secondItem="jrS-6I-cjW" secondAttribute="bottom" id="k0F-GU-REJ"/>
+                            <constraint firstItem="jrS-6I-cjW" firstAttribute="top" secondItem="NLf-hM-Uv9" secondAttribute="bottom" id="wcp-HX-sdu"/>
+                        </constraints>
                     </view>
+                    <connections>
+                        <outlet property="filterView" destination="jrS-6I-cjW" id="m1Y-7N-7EG"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="DQY-Y5-Atw" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
@@ -51,31 +87,22 @@
                         <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="2Fw-rH-c9r" userLabel="Camera Preview" customClass="SCFilterSelectorView">
-                                <rect key="frame" x="0.0" y="0.0" width="600" height="540"/>
+                            <view contentMode="scaleAspectFill" translatesAutoresizingMaskIntoConstraints="NO" id="2Fw-rH-c9r" userLabel="Camera Preview" customClass="SCFilterSelectorView">
+                                <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
                                 <color key="backgroundColor" white="0.0" alpha="1" colorSpace="calibratedWhite"/>
                             </view>
-                            <button opaque="NO" contentMode="scaleToFill" misplaced="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="b3o-63-A2P" userLabel="Flip Camera">
-                                <rect key="frame" x="16" y="40" width="39" height="30"/>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="b3o-63-A2P" userLabel="Flip Camera">
+                                <rect key="frame" x="20" y="550" width="39" height="30"/>
                                 <state key="normal" image="ic-camera-flip">
                                     <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
                                 </state>
+                                <connections>
+                                    <action selector="flipCamera:" destination="Mkj-ew-cSR" eventType="touchUpInside" id="uhY-UC-avw"/>
+                                </connections>
                             </button>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="7s2-e5-NVe" userLabel="Capture">
                                 <rect key="frame" x="259" y="496" width="83" height="84"/>
                                 <state key="normal" image="ic-capture">
-                                    <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
-                                </state>
-                            </button>
-                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Lns-QH-k4C" userLabel="Magic Wand">
-                                <rect key="frame" x="20" y="542" width="37" height="38"/>
-                                <state key="normal" image="ic-magic-wand">
-                                    <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
-                                </state>
-                            </button>
-                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="y4J-e7-Clx" userLabel="Edit Text">
-                                <rect key="frame" x="548" y="547" width="32" height="33"/>
-                                <state key="normal" image="ic-edit-text">
                                     <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
                                 </state>
                             </button>
@@ -86,20 +113,23 @@
                             <constraint firstItem="2Fw-rH-c9r" firstAttribute="leading" secondItem="M3U-qM-guW" secondAttribute="leading" id="3PL-62-xQu"/>
                             <constraint firstAttribute="trailing" secondItem="2Fw-rH-c9r" secondAttribute="trailing" id="72f-e3-Gy6"/>
                             <constraint firstItem="b3o-63-A2P" firstAttribute="leading" secondItem="M3U-qM-guW" secondAttribute="leading" constant="20" id="9SI-el-IUd"/>
-                            <constraint firstItem="y4J-e7-Clx" firstAttribute="trailing" secondItem="M3U-qM-guW" secondAttribute="trailing" constant="-20" id="AY9-eG-qa5"/>
                             <constraint firstAttribute="centerX" secondItem="7s2-e5-NVe" secondAttribute="centerX" constant="-0.5" id="Nn2-UL-EV3"/>
-                            <constraint firstItem="sS8-ya-4lZ" firstAttribute="top" secondItem="y4J-e7-Clx" secondAttribute="bottom" constant="20" id="Rsh-O0-ilS"/>
-                            <constraint firstItem="sS8-ya-4lZ" firstAttribute="top" secondItem="2Fw-rH-c9r" secondAttribute="bottom" constant="60" id="hn7-Hn-7PE"/>
-                            <constraint firstItem="sS8-ya-4lZ" firstAttribute="top" secondItem="Lns-QH-k4C" secondAttribute="bottom" constant="20" id="ml3-zS-lYY"/>
-                            <constraint firstItem="Lns-QH-k4C" firstAttribute="leading" secondItem="M3U-qM-guW" secondAttribute="leading" constant="20" id="ng6-6l-UsO"/>
+                            <constraint firstItem="sS8-ya-4lZ" firstAttribute="top" secondItem="b3o-63-A2P" secondAttribute="bottom" constant="20" id="e6b-6h-udX"/>
+                            <constraint firstItem="sS8-ya-4lZ" firstAttribute="top" secondItem="2Fw-rH-c9r" secondAttribute="bottom" id="hn7-Hn-7PE"/>
                             <constraint firstItem="sS8-ya-4lZ" firstAttribute="top" secondItem="7s2-e5-NVe" secondAttribute="bottom" constant="20" id="tdQ-bU-MSn"/>
                             <constraint firstItem="b3o-63-A2P" firstAttribute="top" secondItem="kas-4p-VNL" secondAttribute="bottom" constant="20" id="xoA-xb-6Tn"/>
                         </constraints>
+                        <variation key="default">
+                            <mask key="constraints">
+                                <exclude reference="xoA-xb-6Tn"/>
+                            </mask>
+                        </variation>
                     </view>
                     <navigationItem key="navigationItem" id="cht-BE-lwq"/>
                     <nil key="simulatedStatusBarMetrics"/>
                     <connections>
                         <outlet property="previewView" destination="2Fw-rH-c9r" id="0cp-IO-f9u"/>
+                        <outlet property="recordButton" destination="7s2-e5-NVe" id="eOl-bu-Bic"/>
                         <segue destination="uPv-0o-aed" kind="show" identifier="RecorderToEditor" id="SWo-hc-sLD"/>
                     </connections>
                 </viewController>
@@ -111,7 +141,6 @@
     <resources>
         <image name="ic-camera-flip" width="39" height="30"/>
         <image name="ic-capture" width="83" height="84"/>
-        <image name="ic-edit-text" width="32" height="33"/>
-        <image name="ic-magic-wand" width="37" height="38"/>
+        <image name="ic-close" width="28" height="28"/>
     </resources>
 </document>
