Synchronizing filters between recorder and editor

--- a/Taylr/AVKit/AVKit.storyboard
+++ b/Taylr/AVKit/AVKit.storyboard
@@ -87,7 +87,7 @@
                         <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <view contentMode="scaleAspectFill" translatesAutoresizingMaskIntoConstraints="NO" id="2Fw-rH-c9r" userLabel="Camera Preview" customClass="SCFilterSelectorView">
+                            <view contentMode="scaleAspectFill" translatesAutoresizingMaskIntoConstraints="NO" id="2Fw-rH-c9r" userLabel="Camera Preview" customClass="SCSwipeableFilterView">
                                 <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
                                 <color key="backgroundColor" white="0.0" alpha="1" colorSpace="calibratedWhite"/>
                             </view>
